--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,10 @@
 == README
-About this project
+About this project:
+
 This project is built on the RELIEF INSIGHT platform, with Ruby on Rails.
-Implement cool features (see the last paragraph for ideas), contribute to this repo and help to create access to disaster resilience items for those in need.
-________________________________________
+Implement cool features (see the last paragraph for ideas), 
+contribute to this repo and help to create access to disaster resilience items for those in need.
+_________________________________________________________________________
 RELIEFINSIGHT
 
 This application is a two-sided Marketplace for disaster resilience.
