--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,9 @@
-== README
+README
+About this project:
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This project is built on the RELIEF INSIGHT platform, with Ruby on Rails. Implement cool features (see the last paragraph for ideas), contribute to this repo and help to create access to disaster resilience items for those in need. _ RELIEFINSIGHT
+
+This application is a two-sided Marketplace for disaster resilience.
 
 Things you may want to cover:
 
