--- a/README.rdoc
+++ b/README.rdoc
@@ -24,6 +24,9 @@ Things you may want to cover:
 * Deployment instructions
 
 * ...
+Originally created by () []
+Edited by E-V-E [https://github.com/E-V-E]
+
 
 
 Please feel free to use a different markup language if you do not plan to run
